--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,22 @@ python = "^3.6"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+pysen = {version = "0.10.2", extras = ["lint"]}
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pysen]
+version = "0.10"
+
+[tool.pysen.lint]
+enable_black = true
+enable_flake8 = true
+enable_isort = true
+enable_mypy = true
+mypy_preset = "strict"
+line_length = 88
+py_version = "py37"
+[[tool.pysen.lint.mypy_targets]]
+  paths = ["."]
